--- a/aiverify-test-engine/pyproject.toml
+++ b/aiverify-test-engine/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "jsonschema==4.21.1",
     "referencing==0.33.0",
     "rpds-py==0.17.1",
-    "setuptools==75.1.0",
+    "setuptools>=78.1.1",
     "requests==2.32.3",
     "pydantic==2.*",
 ]
