--- a/aiverify-apigw/aiverify-apigw-node/package.json
+++ b/aiverify-apigw/aiverify-apigw-node/package.json
@@ -11,8 +11,8 @@
   "author": "Leong Peck Yoke <leong_peck_yoke@imda.gov.sg>",
   "license": "MIT",
   "dependencies": {
-    "esbuild": "^0.24.0",
-    "mdx-bundler": "^10.0.3",
+    "esbuild": ">=0.25.x",
+    "mdx-bundler": "^10.1.1",
     "moment": "^2.30.1",
     "rehype-mdx-import-media": "^1.2.0",
     "remark-gfm": "^4.0.0",
@@ -23,8 +23,21 @@
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
+  },
+  "overrides": {
+    "mdx-bundler": {
+      "remark-mdx-frontmatter": {
+        "estree-util-value-to-estree": ">=3.3.3"
+      }
+    },
+    "rehype-mdx-import-medi": {
+      "hast-util-properties-to-mdx-jsx-attributes": {
+        "estree-util-value-to-estree": ">=3.3.3"
+      }
+    }
+
   }
 }
