remove existing images in ECR repo before pushing new one

--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -101,7 +101,8 @@ jobs:
         run: |
           aws ecr list-images \
             --repository-name ${{ github.event.inputs.github_username || 'aiverify-foundation' }}/${{ matrix.image_name }} \
-            --query 'imageIds[*]' \
+            --filter tagStatus=ANY \
+            --query 'imageIds' \
             --output json | \
           jq -c '.[]' | \
           while read -r image; do
