rewrite Dockerfile for multi-stage secure builds, rename target aiverify-test-engine-worker-base to base, run app as non-root user

--- a/aiverify-test-engine-worker/Dockerfile
+++ b/aiverify-test-engine-worker/Dockerfile
@@ -1,5 +1,5 @@
 # target build base image
-FROM python:3.11-slim AS aiverify-test-engine-worker-base
+FROM python:3.11-slim AS build
 ARG TARGETARCH
 
 # Combine all apt-get installations into a single layer with cleanup
@@ -17,8 +17,7 @@ RUN apt-get update && \
 ENV PYTHONUNBUFFERED=1
 ENV PIP_NO_CACHE_DIR=1
 
-RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir --no-binary h5py h5py
+RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir --no-binary h5py h5py
 
 WORKDIR /app
 
@@ -32,11 +31,6 @@ RUN echo "Building base image on target architecture $TARGETARCH"
 RUN sh install-${TARGETARCH}.sh
 # RUN pip install pydantic>=2.0.0
 
-# add additional env as necessary
-
-# target build and run using venv
-FROM aiverify-test-engine-worker-base AS venv-build
-
 WORKDIR /app
 
 # copy files
@@ -48,14 +42,47 @@ WORKDIR /app/aiverify-test-engine-worker
 
 RUN pip install -e .
 
+FROM python:3.11-slim AS base
+ARG TARGETARCH
+
+# Create a non-root user
+RUN useradd -m appuser
+
+# update the installed packages to latest versions
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copy only the necessary files from the build stage
+WORKDIR /app
+COPY --from=build /app/aiverify-test-engine-worker ./aiverify-test-engine-worker
+COPY --from=build /app/aiverify-test-engine ./aiverify-test-engine
+COPY --from=build /app/common ./common
+COPY --from=build /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
+
+# update setuptools
+RUN pip install -U pip && pip install --no-cache-dir -U setuptools>=78.1.1
+
+# Change ownership of the application and directory
+RUN chown -R appuser:appuser /app
+
+# Switch to the non-root user
+USER appuser
+
+# venv build
+FROM base AS venv-build
+
 ENV TEWORKER_LOG_LEVEL="debug"
 ENV APIGW_URL=http://host.docker.internal:4000
 ENV PYTHON=python
 ENV VALKEY_HOST_ADDRESS=host.docker.internal
+# add additional env as necessary
 
 ENTRYPOINT ["python", "-m", "aiverify_test_engine_worker"]
 
 
+# dind build
 FROM venv-build AS docker-build
 
 # RUN apk update && apk add --no-cache docker-cli
@@ -64,3 +91,5 @@ COPY --from=docker/buildx-bin /buildx /usr/libexec/docker/cli-plugins/docker-bui
 
 ENV PIPELINE_BUILD=docker_build
 ENV PIPELINE_EXECUTE=docker_run
+
+ENTRYPOINT ["python", "-m", "aiverify_test_engine_worker"]
