--- a/deployment/docker-compose-dev/compose.yaml
+++ b/deployment/docker-compose-dev/compose.yaml
@@ -7,6 +7,7 @@ services:
       context: ../../
       dockerfile: aiverify-apigw/Dockerfile
     # profiles: [frontend,automated_tests]
+    user: appuser
     ports:
       - "4000:4000"
     volumes:
@@ -28,7 +29,8 @@ services:
     build:
       context: ../../
       dockerfile: aiverify-portal/Dockerfile
-      target: development
+      #  target: development
+    user: node
     profiles:
       - portal
     depends_on:
@@ -47,7 +49,7 @@ services:
       - aiverify_net
 
   valkey:
-    image: valkey/valkey:8
+    image: valkey/valkey:8-alpine
     profiles:
       - automated-tests-venv
       - automated-tests-docker
@@ -66,7 +68,7 @@ services:
     build:
       context: ../../
       dockerfile: aiverify-test-engine-worker/Dockerfile
-      target: aiverify-test-engine-worker-base
+      target: base
     profiles:
       - build-only
     networks:
@@ -77,6 +79,7 @@ services:
       context: ../../
       dockerfile: aiverify-test-engine-worker/Dockerfile
       target: venv-build
+    user: appuser
     profiles:
       - automated-tests-venv
     deploy:
@@ -95,11 +98,11 @@ services:
       - aiverify_net
 
   test-engine-worker-docker:
-    user: root
     build:
       context: ../../
       dockerfile: aiverify-test-engine-worker/Dockerfile
       target: docker-build
+    user: root # unfortunately required for dind
     profiles:
       - automated-tests-docker
     deploy:
