--- a/deployment/kubernetes/valkey.yaml
+++ b/deployment/kubernetes/valkey.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
         - name: valkey
-          image: valkey/valkey:8
+          image: valkey/valkey:8-alpine
           ports:
             - containerPort: 6379
           # livenessProbe:
