--- a/deployment/kubernetes/test_engine_worker.yaml
+++ b/deployment/kubernetes/test_engine_worker.yaml
@@ -26,6 +26,10 @@ spec:
       labels:
         app: test-engine-worker
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
         - name: test-engine-worker
           image: ghcr.io/aiverify-foundation/aiverify-test-engine-worker:latest-venv
