--- a/aiverify-apigw/pyproject.toml
+++ b/aiverify-apigw/pyproject.toml
@@ -10,7 +10,7 @@ Source = "https://github.com/aiverify-foundation/aiverify/tree/v2.x"
 [project]
 name = "aiverify-apigw"
 version = "2.0.1"
-description = 'The aapigw provides middleware functionality for the aiverify portal'
+description = 'The apigw provides middleware functionality for the aiverify portal'
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
