Do not run image-build-push job if matrix is empty

--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -35,7 +35,7 @@ on:
 
   # When there are changes to pyproject.toml, package.json
   push:
-    branches: [ main, ci/release-docker-image-fix ]
+    branches: [ main ]
     paths:
       - '**/pyproject.toml'
       - '**/package.json'
