--- a/aiverify-test-engine-worker/Dockerfile
+++ b/aiverify-test-engine-worker/Dockerfile
@@ -1,71 +1,40 @@
-# target build base image
-FROM python:3.11-slim AS build
+##
+## Build the python base image first with the folliowing command:
+## docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+##
+## Base worker buid
+#
+FROM aiverify-python-base AS base
 ARG TARGETARCH
+ARG APT_WORKER_PACKAGES_TO_INSTALL="gcc g++ pkg-config"
 
-# Combine all apt-get installations into a single layer with cleanup
-RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y \
-    git \
-    gcc \
-    libhdf5-dev \
-    pkg-config && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-# add additional system libraries as necessary
-
-ENV PYTHONUNBUFFERED=1
-ENV PIP_NO_CACHE_DIR=1
-
-RUN pip install --no-cache-dir --upgrade pip && pip install --no-cache-dir --no-binary h5py h5py
-
-WORKDIR /app
-
-COPY aiverify-test-engine/ ./aiverify-test-engine/
-COPY aiverify-test-engine-worker/install-arm64.sh ./aiverify-test-engine/install-arm64.sh
-COPY aiverify-test-engine-worker/install-amd64.sh ./aiverify-test-engine/install-amd64.sh
- 
-WORKDIR /app/aiverify-test-engine
-
-RUN echo "Building base image on target architecture $TARGETARCH"
-RUN sh install-${TARGETARCH}.sh
-# RUN pip install pydantic>=2.0.0
-
-WORKDIR /app
-
-# copy files
-COPY aiverify-test-engine-worker/ ./aiverify-test-engine-worker/
-COPY common/ ./common/
-
-# install dependencies
-WORKDIR /app/aiverify-test-engine-worker
-
-RUN pip install -e .
-
-FROM python:3.11-slim AS base
-ARG TARGETARCH
+ENV PATH=/usr/local/bin:$PATH
+ENV CMAKE_PREFIX_PATH=/usr/local/
 
 # Create a non-root user
 RUN useradd -m appuser
 
-# update the installed packages to latest versions
+# Copy only the necessary files from the build stage
+WORKDIR /app
+COPY aiverify-test-engine-worker ./aiverify-test-engine-worker
+# COPY --from=build /app/aiverify-test-engine ./aiverify-test-engine
+# COPY --from=build /app/common ./common
+# COPY --from=build /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
+
+# need to install in both base and build stages as test-engine-worker needs to build the algorithms
 RUN apt-get update && \
     apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends ${APT_WORKER_PACKAGES_TO_INSTALL} && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Copy only the necessary files from the build stage
-WORKDIR /app
-COPY --from=build /app/aiverify-test-engine-worker ./aiverify-test-engine-worker
-COPY --from=build /app/aiverify-test-engine ./aiverify-test-engine
-COPY --from=build /app/common ./common
-COPY --from=build /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
-
-# update setuptools
-RUN pip install -U pip && pip install --no-cache-dir -U setuptools>=78.1.1
+# # install aiverify-test-engine-worker
+WORKDIR /app/aiverify-test-engine-worker
+RUN pip install cmake && pip install -e .
 
 # Change ownership of the application and directory
 RUN chown -R appuser:appuser /app
+
 
 # venv build
 FROM base AS venv-build
