add env variable for VALKEY_PORT

--- a/deployment/kubernetes-dev/apigw.yaml
+++ b/deployment/kubernetes-dev/apigw.yaml
@@ -70,6 +70,8 @@ spec:
               value: "0.0.0.0"
             - name: VALKEY_HOST_ADDRESS
               value: "valkey.aiverify.svc.cluster.local"
+            - name: VALKEY_PORT
+              value: "6379"
           volumeMounts:
             - mountPath: /data
               name: apigw-data
