--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -18,9 +18,6 @@ on:
         default: "main"
         type: string
 
-  push:
-    branches:
-      - "main"
 # Allow one concurrent deployment
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}
@@ -54,11 +51,14 @@ jobs:
 
       - name: Build & RUN PORTAL, APIGW & Test Engine Worker
         run: |
+          echo "Building aiverify-python-base"
+          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile .
           cd deployment/docker-compose-dev
-          DOCKER_BUILDKIT=1 docker build -f aiverify-portal/Dockerfile -t aiverify-portal --target production .
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile portal up -d
-          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile automated-tests-venv up -d
+
+          echo "Building & Running Portal, APIGW & Test Engine Worker"
+          # COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile portal up -d
+          # bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile portal --profile automated-tests-venv up -d
           cd ${GITHUB_WORKSPACE}
 
       # - name: Set ROOT_PATH Variable
