--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -51,13 +51,26 @@ jobs:
 
       - name: Build & RUN PORTAL, APIGW & Test Engine Worker
         run: |
-          echo "Building aiverify-python-base"
+          echo "Building Python Base Image"
           docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+
+          echo "Building APIGW Image"
+          docker buildx build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+
+          echo "Building Test Engine Worker Image"
+          docker buildx build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+
+          echo "Building Portal Image"
+          docker buildx build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+
           cd deployment/docker-compose-dev
 
           echo "Building & Running Portal, APIGW & Test Engine Worker"
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile portal up -d
-          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker compose --profile automated-tests-venv up -d
           cd ${GITHUB_WORKSPACE}
 
