Change to NPM CI

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -166,8 +166,8 @@ jobs:
       - name: Run Smoke Test
         run: |
           cd smoke-testing
-          # npm install
-          # bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
+          npm ci
+          bash ${GITHUB_WORKSPACE}/.ci/free_disk_space.sh
           npx playwright install --with-deps
           URL=http://127.0.0.1:3000 npx playwright test tests/03-smoke.spec.js
 
