--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -204,13 +204,13 @@ jobs:
           set +e
           if [ "${{ matrix.image_name }}" == "aiverify-test-engine-worker" ] || [ "${{ matrix.image_name }}" == "aiverify-apigw" ]; then
             echo "Building aiverify-python-base..."
-            bash .ci/docker_build_push.sh true aiverify-python-base $tag aiverify-foundation aiverify-test-engine
+            bash .ci/docker_build_push.sh false aiverify-python-base $tag aiverify-foundation aiverify-test-engine
           fi
           echo "Building image ${{ matrix.image_name}}:$tag ${{ matrix.target }} ${{ matrix.tag_suffix }}..."
           if [ "${{ matrix.target }}" == "" ]; then
-            bash .ci/docker_build_push.sh false ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }}
+            bash .ci/docker_build_push.sh true ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }}
           else
-            bash .ci/docker_build_push.sh false ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }} ${{ matrix.target }} ${{ matrix.tag_suffix }}
+            bash .ci/docker_build_push.sh true ${{ matrix.image_name }} $tag aiverify-foundation ${{ matrix.image_name }} ${{ matrix.target }} ${{ matrix.tag_suffix }}
           fi
           build_status=$?
           set -e
