Change tag to latest

--- a/.github/workflows/v2-docker-build-push.yml
+++ b/.github/workflows/v2-docker-build-push.yml
@@ -204,7 +204,7 @@ jobs:
           set +e
           if [ "${{ matrix.image_name }}" == "aiverify-test-engine-worker" ] || [ "${{ matrix.image_name }}" == "aiverify-apigw" ]; then
             echo "Building aiverify-python-base..."
-            bash .ci/docker_build_push.sh false aiverify-python-base $tag aiverify-foundation aiverify-test-engine
+            bash .ci/docker_build_push.sh false aiverify-python-base latest aiverify-foundation aiverify-test-engine
           fi
           echo "Building image ${{ matrix.image_name}}:$tag ${{ matrix.target }} ${{ matrix.tag_suffix }}..."
           if [ "${{ matrix.target }}" == "" ]; then
