--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -117,6 +117,13 @@ jobs:
               --image-ids "[$image]"
           done
 
+      # Enable containerd image store for Docker engine
+      - name: Enable containerd image store
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{"features": {"containerd-snapshotter": true}}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
       # Build and push Docker image using provided or matrix values
       - name: Run Docker build & push
         run: |
