fix mutl-platform issue limitation of local registry

--- a/.github/workflows/v2-docker-build-push-ecr.yml
+++ b/.github/workflows/v2-docker-build-push-ecr.yml
@@ -124,7 +124,7 @@ jobs:
           chmod +x .ci/docker_build_push.sh
           .ci/docker_build_push.sh \
             aiverify-python-base \
-            latest \
+            base \
             aiverify-foundation \
             aiverify-test-engine
 
